# ispc

./: .gitattributes  CMakeLists.txt  README.md  alloy.py  check_isa.cpp  run_tests.py  simulator.py  stdlib.ispc  test_static.cpp  test_static.isph
.claude/commands/: fix-gh-issue.md
.github/workflows/: bandit.yml  coverity.yml  dll-inject-release.yml  dll-inject.yml  hardening-check-release.yml  hardening-check.yml  ispc-ci-internal-artifactory.yml  ispc-ci-internal-copyright-check.yml  ispc-ci-internal-docs.yml  ispc-ci-internal-format-check.yml  ispc-ci-internal-preset.yml  (+20 more)
benchmarks/: common.h
builtins/: builtins-c-cpu.cpp  dispatch.c  generic.ispc  target-avx-common-16.ll  target-avx-common-8.ll  target-avx-utils.ll  target-avx1-i32x16.ll  target-avx1-i32x8.ll  target-avx1-i64x4base.ll  target-avx10_2-x16-nozmm.ll  target-avx2-common-i32x4.ll  target-avx2-common-i32x8.ll  target-avx2-i16x16.ll  target-avx2-i32x4.ll  target-avx2-i8x32.ll  target-avx512-common-16.ll  target-avx512-common-32.ll  target-avx512-common-4.ll  target-avx512-common-64.ll  target-avx512-common-8.ll  target-avx512-utils.ll  target-avx512icl-x16-nozmm.ll  target-avx512icl-x16.ll  target-avx512icl-x32.ll  target-avx512icl-x4.ll  target-avx512icl-x64.ll  target-avx512icl-x8.ll  target-avx512knl-x16.ll  target-avx512skx-x16.ll  target-avx512skx-x32.ll  target-avx512skx-x4.ll  target-avx512skx-x64.ll  target-avx512skx-x8.ll  target-avx512spr-x16.ll  target-avx512spr-x32.ll  target-avx512spr-x4.ll  target-avx512spr-x64.ll  target-avx512spr-x8.ll  target-neon-common.ll  target-neon-i16x8.ll  (+15 more)
cmake/: GenerateBuiltins.cmake  GenericTargets.cmake  Stdlib.cmake  ispcConfig.cmake.in
contrib/: ispc.vim
docs/: ispc.rst
examples/cpu/simple_lib/: CMakeLists.txt  simple.cpp  simple_c.c  simple_jit.cpp  test_svml_debug.cpp
scripts/: alloy.py  run_tests.py
src/: args.cpp  binary_composite.cpp  builtins-decl.cpp  builtins-decl.h  builtins.cpp  builtins.h  ctx.cpp  ctx.h  decl.cpp  decl.h  example_usage.cpp  expr.cpp  expr.h  func.cpp  func.h  header.cpp  intrinsics.cpp  isa.h  ispc.cpp  ispc.h  ispc_engine.cpp  ispc_engine.h  ispc_impl.cpp  lex.ll  llvmutil.cpp  main.cpp  module.cpp  module.h  opt.cpp  options.cpp  options.h  parse.yy  preprocessor.cpp  stmt.cpp  sym.cpp  sym.h  target_capabilities.h  target_enums.cpp  target_enums.h  target_registry.cpp  (+3 more)
stdlib/: stdlib.ispc
superbuild/: CMakeLists.txt  CMakePresets.json  README.md  intPresets.json  os-intPresets.json
syntax/: gpt.json  tmISPC.tm  tmISPC2.tm
tests/: CMakeLists.txt  align1.ispc  align2.ispc  array.ispc  coalesce-1.ispc  coalesce-2.ispc  coalesce-3.ispc  coalesce-4.ispc  coalesce-5.ispc  coalesce-6.ispc  coalesce-7.ispc  coalesce-8.ispc  dot2add_i16-sat.ispc  dot2add_i16.ispc  dot4add_u8i8-1.ispc  dot4add_u8i8-2.ispc  dot4add_u8i8-3.ispc  dot4add_u8i8-4.ispc  dot4add_u8i8-5.ispc  dot4add_u8i8-sat-1.ispc  dot4add_u8i8-sat-2.ispc  dot4add_u8i8-sat-3.ispc  dot4add_u8i8.ispc  fmodf-double-uniform.ispc  fmodf-double-varying.ispc  fmodf-float-uniform.ispc  fmodf-float-varying.ispc  fmodf-float16-uniform.ispc  fmodf-float16-varying.ispc  foreach-double-1.ispc  launch-1.ispc  launch-2.ispc  launch-3.ispc  launch-4.ispc  launch-5.ispc  launch-6.ispc  launch-7.ispc  launch-8.ispc  launch-9.ispc  memcpy-uniform.ispc  (+45 more)
(+111 files in other folders)
